fix: main navigation 2.level overlapse 1.level

--- a/adhocracy/spdfraktion_theme/static/stylesheets/style_custom.css
+++ b/adhocracy/spdfraktion_theme/static/stylesheets/style_custom.css
@@ -155,7 +155,7 @@ body.logged_in #logo {
   color: #2d3441;
   display: block;
   height: auto;
-  padding: 0 5px 0 8px;
+  padding: 0 5px 1px 8px;
   text-decoration: none;
   line-height: 1em;
   background: url('/static_theme/static/images/element_line_dotted_vertical.gif') left top repeat-y !important;  /*make sure styles.css does not override this, joka */
